--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,11 @@
 /** CSS reset **/
 body{
+    display: flex;
+    min-height: 100vh; 
+    flex-direction: column;
     margin: auto;
-    padding: 0%;
-    box-sizing: content-box;
+    padding: 0; 
+    box-sizing: border-box; 
 }
 /*******************************/
 
@@ -99,17 +102,83 @@ a{
 
 /** Estilos para registro.php **/
 .main{
-    width: 100%;
-    height: 100vh;
+    flex: 1 0 auto; 
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: -100px;
+    align-items: center; 
+    justify-content: center; 
+    padding: 40px 0;
 }
 
 .btn-reg{
     margin-top: 20px;
 }
+
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+ }
+ 
+ .formu-main {
+    width: 90%;
+    max-width: 500px;
+    padding: 20px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    border-radius: 8px;
+    background-color: white;
+    margin-top: 20px; /* Ajuste para el espacio */
+ }
+ 
+ .formu-main form .input-field {
+    margin-bottom: 20px;
+ }
+ 
+ .formu-main form .btn-reg {
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 25px;
+ }
+ 
+ .title-main {
+    text-align: center;
+    margin-bottom: 20px;
+ }
+ 
+ .page-footer {
+    padding-top: 20px;
+ }
+ 
+ .nav-wrapper {
+    padding: 0 20px;
+ }
+ 
+ /* Media queries para responsividad */
+  @media only screen and (min-width: 601px) {
+    .input-field.col.s12 > i {
+        left: 0;
+    }
+ 
+    .input-field.col.s12 input,
+    .input-field.col.s12 select {
+        margin-left: 3rem;
+        width: calc(100% - 3rem);
+    }
+ 
+    .input-field.col.s12 label {
+        margin-left: 3rem;
+    }
+ }
 /*********************************/
 /** Estilos citaciones.php **/
 .main1{
